--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="refreshmentsButtonText">Order and Pay</string>
     <string name="promotionsButtonText">My Promotions</string>
     <string name="infoButtonText">Info</string>
+    <string name="Total">0.00</string>
+    <string name="OrderButton">Order</string>
+    <string name="ResetButton">Reset</string>
+    
 </resources>
