--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="Total">0.00</string>
     <string name="OrderButton">Order</string>
     <string name="ResetButton">Reset</string>
-    
+    <string name="AdidasAdvertAddress">http://www.youtube.com/watch?v=yNOA3Veod8s</string>
+    <string name="UEFAAdvertAddress">http://www.youtube.com/watch?v=NuTDXNCeHuc</string>
 </resources>
