Going to completely rewrite the order/pay bit

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,4 +10,17 @@
     <string name="ResetButton">Reset</string>
     <string name="AdidasAdvertAddress">http://www.youtube.com/watch?v=yNOA3Veod8s</string>
     <string name="UEFAAdvertAddress">http://www.youtube.com/watch?v=NuTDXNCeHuc</string>
+    <string name="OffersButtonText">Offers at the bar</string>
+    <string name="redeemButtonText">Redeem Web Voucher</string>
+    <string name="sponsoredButtonText">Sponsored Product</string>
+    <string name="spoonserAddress">http://www.workersbeer.co.uk/</string>
+    <string name="chelseaSeatingPlan">http://theblues.chelseafc.com/iframes/stadiumplan/stadiumplan.htm#</string>
+    <string name="VenueInfoTitleText">Venue Information</string>
+    <string name="SeatingPlanButtonText">Seating Plan</string>
+    
+  	<string name="CarlsbergIcon">http://www.carlsberg.co.uk/SiteImages/Assets/1/1/Carlsberg-bottle.png</string>
+  	<string name="CarlsbergExportIcon">http://www.carlsberg.co.uk/SiteImages/Assets/1/1/Carlsberg-bottle.png</string>
+  	<string name="CarlsbergSpecialBrewIcon">http://www.carlsberg.co.uk/SiteImages/Assets/1/1/Carlsberg-bottle.png</string>
+  	
+  	  
 </resources>
