Nothing much changed here...

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,7 @@
     
 
 	 <string name="SendOrderButtonText">Confirm Order</string>
- 	<string name="BillRecipientEmail">uri@triplejumptech.com</string>
+ 	<string name="BillRecipientEmail">roy@triplejumptech.com</string>
   	<string name="Black">#000000</string>
   	<string name="Blue">#000010</string>
   	  
