--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,9 +19,9 @@
     <string name="SeatingPlanButtonText">Seating Plan</string>
     
 
-	 <string name="SendOrderButtonText">Confirm Order</string>
- 	<string name="BillRecipientEmail">roy@triplejumptech.com</string>
+	<string name="SendOrderButtonText">Confirm Order</string>
+ 	<string name="BillRecipientEmail">uri@triplejumptech.com</string>
   	<string name="Black">#000000</string>
-  	<string name="Blue">#000010</string>
-  	  
+  	<string name="TJTServer">192.168.1.67</string>
+  	
 </resources>
